fix(ui): Make subtask wrap if text too long

--- a/src/pages/TaskDetails.css
+++ b/src/pages/TaskDetails.css
@@ -29,3 +29,7 @@ ion-modal.smallEditModal .wrapper {
 ion-modal.smallEditModal .wrapper ion-textarea {
     /* --highlight-color-focused: transparent; */
 }
+
+ion-checkbox::part(label) {
+    white-space: initial;
+}
